# Atlaspack-Version-Manager

./: .gitignore  Cargo.toml  DOCS.md  README.md  justfile  test.bash
.github/install-scripts/fnm/: install.bash
.github/workflows/: release.yaml
.parcel-cache/: a29ccf82cbdfeb9d-AssetGraph-0  data.mdb  requestGraph-e0764ed3f4a15e63-0  requestGraph-nodes-0-e0764ed3f4a15e63-0  snapshot-e0764ed3f4a15e63.txt
npm/: package.json  postinstall.mjs
src/: config.rs  constants.rs  env.rs  log.rs  main.rs  paths.rs
src/cmd/: build.rs  debug.rs  default.rs  env.rs  global.rs  info.rs  install.rs  install_git.rs  install_local.rs  install_npm.rs  install_super.rs  link.rs  list.rs  mod.rs  node_modules.rs  node_modules_link.rs  npm.rs  npm_link.rs  npm_link_npm.rs  proxy.rs  reinstall.rs  run.rs  uninstall.rs  unload.rs  use.rs  version.rs
src/js/: apvm.cjs
src/platform/: active.rs  apvmrc.rs  atlaspack.rs  atlaspack_packages.rs  colors.rs  constants.rs  exec.rs  link.rs  mod.rs  name.rs  origin.rs  package.rs  path_ext.rs  runtime.rs  temp_dir.rs
