[package]
name = "apvm"
description = "Atlaspack Version Manager"
repository = "https://github.com/alshdavid/atlaspack-version-manager"
version = "0.0.0-local"
edition = "2024"

[lints.rust]
elided_lifetimes_in_paths = "allow"
rust_2018_idioms = { priority = -1, level = "deny" }

[lints.clippy]
module_inception = "allow"
uninlined-format-args = "allow"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.36", features = ["derive", "env"] }
flate2 = "1.1.1"
fs_extra = "1.3.0"
homedir = "0.3.4"
json = "0.12.4"
rand = "0.9.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.8.20"
which = "7.0.3"
